ENG-1131 modal size modal-lg changed to percent and solve double scrollers issue as well
git-tfs-id: [http://hillstfs2013:8080/tfs/Phytel]$/Nightingale;C16426

--- a/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_modals.scss
+++ b/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_modals.scss
@@ -50,7 +50,7 @@
       overflow: auto;
       max-height: 400px; 
       min-height: 400px; 
-      height: 100%;
+      //height: 100%;
     }
   }
   footer {
@@ -78,11 +78,14 @@
   }
   
   &.modal-lg .content{                     
-    $factor: 0.8; 
-    @include sizemodal($factor);        
-  }  
-  &.modal-md .content {      
-    $factor: 0.7; 
-    @include sizemodal($factor);     
+    width: 80%;
+    margin-left: -40%; 
+    @include modalheight(100%, 109px);    
+    .body {
+        @include modalheight(100%, 94px);
+        > .row.modal-tab{
+            max-height: 1000%;
+        }
+    }     
   }
 }
